# alchemation

./: .gitignore  ALCHEMY.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  ENTITIES.md  TODO.md  VERBS.md  play  play.cpp  play.sav
shaders/: smoke_test.comp
shaders/spv/: smoke_test.comp.spv
src/: alchemy.cpp  alchemy.hpp  audio.cpp  audio.hpp  component_store.hpp  effectSpread.cpp  effectSpread.hpp  effects.hpp  entity.cpp  entity.hpp  events.cpp  events.hpp  field.hpp  fluid.cpp  fluid.hpp  game.cpp  game.hpp  grid.hpp  input.cpp  input.hpp  irenderer.hpp  main.cpp  movement.cpp  recorder.cpp  recorder.hpp  renderer.cpp  renderer.hpp  routine.hpp  routine_vm.cpp  routine_vm.hpp  scheduler.cpp  scheduler.hpp  spatial.cpp  spatial.hpp  stimulus.cpp  stimulus.hpp  studio.cpp  studio.hpp  terminal_renderer.cpp  terminal_renderer.hpp  (+4 more)
src/vk/: compute_pipeline.cpp  compute_pipeline.hpp  gpu_buffer.hpp  gpu_runner.cpp  gpu_runner.hpp  smoke_test_main.cpp  vk_context.cpp  vk_context.hpp
tests/: test_alchemy.cpp  test_extra.cpp  test_fire_voltage.cpp  test_input_map.cpp  test_phase1.cpp  test_phase10.cpp  test_phase11.cpp  test_phase12.cpp  test_phase13.cpp  test_phase14.cpp  test_phase15.cpp  test_phase16.cpp  test_phase17.cpp  test_phase18.cpp  test_phase2.cpp  test_phase3.cpp  test_phase4.cpp  test_phase5.cpp  test_phase6.cpp  test_phase7.cpp  test_phase8.cpp  test_phase9.cpp  test_terminal_renderer.cpp
